--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "scripts": {
     "build": "echo 'no build script'",
     "dev": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
