--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo 'no build script'",
-    "dev": "node server.js"
+    "build": "echo 'Static files ready for deployment'",
+    "dev": "python3 -m http.server 3000"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
+  "dependencies": {}
 }
