--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "echo 'Static files ready for deployment'",
+    "dev": "vite --port 3000",
     "dev": "python3 -m http.server 3000"
   },
   "dependencies": {}
