--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 3000",
-    "dev": "python3 -m http.server 3000"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {}
 }
