--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "vite": "^7.1.1"
+  }
 }
